--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="flex items-center bg-slate-100 gap-2 p-2 rounded-lg">
                 <img src="./assets/coin.png" alt="coin">
-                <h4 class="font-bold text-lg"><span>550</span> BDT</h4>
+                <h4 class="font-bold text-lg"><span id="main-balance">550</span> BDT</h4>
             </div>
         </nav>
         <!-- Navbar End -->
@@ -44,7 +44,7 @@
             <div class="flex flex-col w-full lg:w-5/12 items-baseline justify-around gap-4">
                 <div class="items-center bg-slate-100 gap-2 p-2 rounded-lg justify-center inline-flex">
                     <img src="./assets/coin.png" alt="coin">
-                    <h4 class="font-bold"><span>550</span> BDT</h4>
+                    <h4 class="font-bold"><span id="donation-card-balance">550</span> BDT</h4>
                 </div>
                 <div>
                     <h3 class="font-bold text-lg">Lorem ipsum dolor sit amet consectetur.</h3>
@@ -55,8 +55,8 @@
                 </div>
                 <!-- card Input filed -->
                 <form class="space-y-4 w-full">
-                    <input type="number" placeholder="Donation Amount" class="input input-bordered w-full" />
-                    <button class="btn w-full bg-[#B4F461]">Donation</button>
+                    <input type="number" placeholder="Donation Amount" id="donation-input" class="input input-bordered w-full" />
+                    <button id="donation-btn" class="btn w-full bg-[#B4F461]">Donate Now</button>
                 </form>
             </div>
         </section>
@@ -74,6 +74,8 @@
 
 
     <script src="./js/features.js"></script>
+    <script src="./js/function.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 
 </html>
