--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,17 @@
     <title>Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+    <style>
+        body {
+            font-family: "Poppins", sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -21,7 +32,7 @@
             </div>
             <div class="flex items-center bg-slate-100 gap-2 p-2 rounded-lg">
                 <img src="./assets/coin.png" alt="coin">
-                <h4 class="font-bold text-lg"><span>550</span> BDT</h4>
+                <h4 class="font-bold text-lg"><span id="main-balance">1250</span> BDT</h4>
             </div>
         </nav>
     </header>
