--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <header>
+    <header class="sticky top-0 backdrop-blur-lg">
         <!-- Navbar Start -->
         <nav class="w-[90%] mx-auto py-4 flex justify-between items-center">
             <button onclick="window.location.href = '/blog.html'"
