--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     <header>
         <!-- Navbar Start -->
         <nav class="w-[90%] mx-auto py-4 flex justify-between items-center">
-            <button onclick="window.location.href = '/index.html'"
+            <button onclick="window.location.href = './index.html'"
                 class="font-bold bg-[#B4F461] px-6 py-3 rounded-md">Home</button>
             <div class="flex items-center gap-4">
                 <img src="./assets/logo.png" alt="logo">
