--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="sticky top-0 backdrop-blur-lg">
         <!-- Navbar Start -->
         <nav class="w-[90%] mx-auto py-4 flex justify-between items-center">
-            <button onclick="window.location.href = '/blog.html'"
+            <button onclick="window.location.href = './blog.html' "
                 class="font-bold bg-[#B4F461] px-6 py-3 rounded-md">Blog</button>
             <div class="flex items-center gap-4">
                 <img src="./assets/logo.png" alt="logo">
